Fix GeoServer versions and plugin URLs
- Updated MIDDLE_STABLE from 19 to 27 (current stable: 2.27.2)
- Fixed plugin version mismatch: main branch now uses 2.28-SNAPSHOT plugins
- Updated stable versions: 2.27.2, 2.27.1, 2.26.3
- Updated nightly versions: 2.27.x, 2.26.x
- Removed ignore versions that were causing issues
- Updated test script to use current stable version 2.27.2

This fixes the 404 errors for plugin downloads:
- OLD: geoserver-2.20-SNAPSHOT-monitor-plugin.zip (404)
- NEW: geoserver-2.28-SNAPSHOT-monitor-plugin.zip (✓)

Plugin URLs are now valid based on actual GeoServer build server content.

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -23,13 +23,13 @@ on:
 env:
   REGISTRY: docker.io
   IMAGE_NAME: enterlight/geoserver
-  MIDDLE_STABLE: "19"
+  MIDDLE_STABLE: "27"
   NIGHTLY_MASTER_VERSION: "main"
-  NIGHTLY_STABLE_VERSION: "2.19.x"
-  NIGHTLY_MAINT_VERSION: "2.18.x"
-  STABLE_VERSION: "2.19.2 2.19.1 2.19.0"
-  MAINT_VERSION: "2.18.1 2.18.0"
-  IGNORE_VERSIONS: "2.19.0 2.18.0"
+  NIGHTLY_STABLE_VERSION: "2.27.x"
+  NIGHTLY_MAINT_VERSION: "2.26.x"
+  STABLE_VERSION: "2.27.2 2.27.1 2.26.3"
+  MAINT_VERSION: "2.26.2 2.26.1 2.26.0"
+  IGNORE_VERSIONS: ""
 
 jobs:
   # Job for manual version input
@@ -244,13 +244,14 @@ jobs:
       matrix:
         version: 
           - main
-          - 2.19.x
-          - 2.18.x
-          - 2.19.2
-          - 2.19.1
-          - 2.19.0
-          - 2.18.1
-          - 2.18.0
+          - 2.27.x
+          - 2.26.x
+          - 2.27.2
+          - 2.27.1
+          - 2.26.3
+          - 2.26.2
+          - 2.26.1
+          - 2.26.0
       fail-fast: false
     
     steps:
